--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "scripts": {
     "test": "cross-env CI=1 react-scripts-ts test --env=jsdom",
     "test:watch": "react-scripts-ts test --env=jsdom",
+    "gh-pages": "cd test-app && yarn build && cd .. && gh-pages -d test-app/build",
     "build": "rollup -c",
     "start": "rollup -c -w",
     "prepublish": "rollup -c"
