--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "prepublish": "rollup -c"
   },
   "peerDependencies": {
-    "react": "^15.0.0 || ^16.0.0"
+    "react": "^15.0.0 || ^16.0.0 || ^17.0.0"
   },
   "devDependencies": {
     "@svgr/rollup": "^2.4.1",
