--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "outDir": "../dist",
+    "outDir": "dist",
     "module": "esnext",
     "target": "es5",
     "lib": ["es6", "dom", "es2016", "es2017"],
@@ -16,7 +16,13 @@
     "suppressImplicitAnyIndexErrors": true,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "rootDir": "."
+    "rootDir": ".",
+    "experimentalDecorators": true,
   },
-  "exclude": ["rollup.config.js"]
+  "exclude": [
+    "test-app",
+    "rollup.config.js",
+    "node_modules",
+    "dist"
+  ]
 }
